01-main.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: main
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-main
  namespace: main
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-main
  template:
    metadata:
      labels:
        app: web-main
    spec:
      containers:
        - name: web-main
          image: orlix/httpd-fosdem:main
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web-main
  name: web-main
  namespace: main
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: web-main
  type: ClusterIP
