02-proxy-main.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: root
  namespace: main
spec:
  virtualhost:
    fqdn: local.projectcontour.io
  routes:
  - services:
    - name: web-main
      port: 80
