04-proxy-include-fosdem.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: root
  namespace: main
spec:
  virtualhost:
    fqdn: local.projectcontour.io
  includes:
    - name: fosdem
      namespace: fosdem
      conditions:
        - prefix: /fosdem
  routes:
    - services:
        - name: web-main
          port: 80
      conditions:
        - prefix: /
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: fosdem
  namespace: fosdem
spec:
  routes:
    - services:
        - name: web-v1
          port: 80
