08-50-50.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: fosdem
  namespace: fosdem
spec:
  routes:
    - services:
        - name: web-v1
          port: 80
          weight: 50
        - name: web-v2
          port: 80
          weight: 50
