http-proxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: nginx
  namespace: fosdem
spec:
  virtualhost:
    fqdn: local.projectcontour.io
  routes:
    - conditions:
      - prefix: /
      services:
        - name: nginx
          port: 80
